// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bullet renders correctly with a text 1`] = `
<DocumentFragment>
  .cache-6e2sg8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-6e2sg8 e1u3ywq30"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet renders correctly with an icon 1`] = `
<DocumentFragment>
  .cache-6e2sg8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-1g92yyg {
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.cache-1g92yyg.cache-1g92yyg {
  vertical-align: middle;
}

<div
    class="cache-6e2sg8 e1u3ywq30"
  >
    <svg
      class="sc-ui-icon etwatq50 cache-1g92yyg"
      viewBox="0 0 16 16"
    >
      <path
        d="M15.784 9.897c.021-.066.034-.136.05-.204a2.818 2.818 0 0 0-.958-2.862 3.037 3.037 0 0 0-.44-3.427 2.726 2.726 0 0 0-1.74-.926A4.032 4.032 0 0 0 10.183.203 2.736 2.736 0 0 0 8.09.216a2.348 2.348 0 0 0-.992 2.401l.002.103-.01 9.861c0 .01.005.017.005.026a3.184 3.184 0 0 0 2.663 3.368c.144.015.29.023.435.024a2.972 2.972 0 0 0 2.742-1.62 2.548 2.548 0 0 0 1.496-1.501c.183-.459.223-.962.113-1.444a2.729 2.729 0 0 0 1.24-1.537Zm-3.052 2.328a.693.693 0 0 1-.583.48.935.935 0 0 0-.762.668 1.203 1.203 0 0 1-1.44.792c-.514-.054-1.033-.613-1.033-1.578 0-.006-.004-.011-.004-.017l.003-2.594c-.014-.25.048-.5.177-.716a.835.835 0 0 1 .819-.485.91.91 0 0 0-.092-1.818c-.307.01-.61.068-.9.17l.004-4.423-.003-.126c-.016-.25-.01-.502.019-.751.23-.025.462.01.674.101a1.954 1.954 0 0 1 1.195.927c-.49.346-.87.828-1.092 1.385a.91.91 0 1 0 1.675.713c.191-.449.434-.682.724-.694a1.09 1.09 0 0 1 .925.311 1.276 1.276 0 0 1-.124 1.896.915.915 0 0 0 .327 1.468c.36.152.648.435.806.792.026.115.041.232.046.35-.007.151-.047.3-.118.435a1.068 1.068 0 0 1-.14.152 1.11 1.11 0 0 1-.944.281.91.91 0 0 0-.47 1.758c.102.019.206.032.31.039a.567.567 0 0 1 .001.483Z"
        fill="#AE5DF6"
      />
      <path
        d="m8.922 12.581-.01-9.844.002-.117a2.353 2.353 0 0 0-.99-2.406A2.753 2.753 0 0 0 5.829.2a4.042 4.042 0 0 0-2.511 2.277 2.75 2.75 0 0 0-1.74.927 3.038 3.038 0 0 0-.44 3.426A2.884 2.884 0 0 0 .14 8.64a2.547 2.547 0 0 0 .786 2.418c.165.15.347.281.542.39a2.43 2.43 0 0 0 .114 1.43 2.55 2.55 0 0 0 1.496 1.502A2.971 2.971 0 0 0 5.82 16c.14 0 .285-.009.435-.024a3.185 3.185 0 0 0 2.663-3.368c0-.01.005-.017.005-.026Zm-2.856 1.584c-1.095.105-1.378-.579-1.436-.779a.91.91 0 0 0-.766-.681.694.694 0 0 1-.584-.482.58.58 0 0 1-.017-.428c.104-.007.207-.02.31-.039a.909.909 0 0 0 .227-1.675.91.91 0 0 0-.699-.083c-.21.037-.426.01-.62-.077a1.129 1.129 0 0 1-.11-.06l-.028-.02a.959.959 0 0 1-.407-.985c.005-.029.003-.047.01-.077v-.002a1.48 1.48 0 0 1 .819-.84.91.91 0 0 0 .335-1.472 1.277 1.277 0 0 1-.125-1.896 1.077 1.077 0 0 1 .925-.31c.29.012.533.245.724.693a.91.91 0 1 0 1.675-.712 3.11 3.11 0 0 0-1.092-1.386 2.054 2.054 0 0 1 1.27-.953 1.63 1.63 0 0 1 .574-.102c.052.257.066.52.043.781l-.002.14.007 6.591a2.205 2.205 0 0 0-.88-.198.91.91 0 0 0 0 1.82c.358 0 .88.645.88 1.653 0 .966-.52 1.525-1.033 1.579Z"
        fill="#4F0599"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Bullet size render medium 1`] = `
<DocumentFragment>
  .cache-6e2sg8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-6e2sg8 e1u3ywq30"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet size render small 1`] = `
<DocumentFragment>
  .cache-y0hsnf {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 24px;
  height: 24px;
  font-size: 14px;
}

<div
    class="cache-y0hsnf e1u3ywq30"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet variant render danger 1`] = `
<DocumentFragment>
  .cache-mox4j {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  background-color: #ffe1e7;
  color: #dd3252;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-mox4j e1u3ywq30"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet variant render default 1`] = `
<DocumentFragment>
  .cache-6e2sg8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-6e2sg8 e1u3ywq30"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet variant render disabled 1`] = `
<DocumentFragment>
  .cache-1vjgew8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #b2b6c3;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-1vjgew8 e1u3ywq30"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet variant render info 1`] = `
<DocumentFragment>
  .cache-v3uisi {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  background-color: #e1ebff;
  color: #3f6ed8;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-v3uisi e1u3ywq30"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet variant render primary 1`] = `
<DocumentFragment>
  .cache-1xlq9ak {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  background-color: #eeeeff;
  color: #4f0599;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-1xlq9ak e1u3ywq30"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet variant render success 1`] = `
<DocumentFragment>
  .cache-hbgo2k {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  background-color: #eafffb;
  color: #22c8a2;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-hbgo2k e1u3ywq30"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet variant render warning 1`] = `
<DocumentFragment>
  .cache-1a1hnjh {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  background-color: #ffefe6;
  color: #ff8c69;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-1a1hnjh e1u3ywq30"
  >
    1
  </div>
</DocumentFragment>
`;
